<resources>
    <string name="app_name">Authentication</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="alert_not_found_username">This Username not found</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_network">Error de conexion de red</string>
    <string name="error_name">Name is too short</string>
    <string name="error_age">Age is should be less than 100</string>

    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="save_register">Save Register</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="login">Login</string>

    <string name="signed_out">Signed Out</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="title_activity_login">Authentication</string>
    <string name="help">Help me</string>

    <string name="action_log_in_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="action_sign_in_login">Already have an account? <b>Log in</b></string>
    <string name="action_log_in_forgot_password">Forgot Password?</string>


    <string name="prompt_user_name">User name</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_register">Register</string>


</resources>
